re PR c++/46159 (Bogus warning about lambdas)

PR c++/46159
	* parser.c (cp_parser_primary_expression): Don't warn about a
	failed tentative parse.

From-SVN: r170622